--- a/src/app/home/testimonial/testimonial.component.html
+++ b/src/app/home/testimonial/testimonial.component.html
@@ -14,7 +14,7 @@
         <div class="col-lg-6 col-md-6">
           <div class="single_event position-relative">
             <div class="event_thumb">
-              <img src="../../assets/Images/event/e1.jpg" alt="" />
+              <img src="../../../assets/Images/event/e1.JPG" alt="" />
             </div>
             <div class="event_details">
               <div class="d-flex mb-4">
@@ -40,7 +40,7 @@
         <div class="col-lg-6 col-md-6">
           <div class="single_event position-relative">
             <div class="event_thumb">
-              <img src="../../assets/Images/event/e1.jpg" alt="" />
+              <img src="../../../assets/Images/event/e2.jpg" alt="" />
             </div>
             <div class="event_details">
               <div class="d-flex mb-4">
