--- a/src/app/home/testimonial/testimonial.component.scss
+++ b/src/app/home/testimonial/testimonial.component.scss
@@ -38,7 +38,7 @@
   }
   
   .single_event .event_details {
-    background: rgba(0, 35, 71, 0.5);
+    background: rgb(0 35 71 / 83%);
     position: absolute;
     top: 0px;
     right: 0px;
